--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<maven.comiler.target>${java.version}</maven.comiler.target>
 		<junit.jupiter.version>5.3.2</junit.jupiter.version>
 		<junit.platform.version>1.3.2</junit.platform.version>
+		<jackson.version>2.13.2</jackson.version>
 	</properties>
 
 	<dependencies>
@@ -47,6 +48,16 @@
 			<artifactId>junit-platform-launcher</artifactId>
 			<version>${junit.platform.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>${jackson.version}</version>
 		</dependency>
 	</dependencies>
 </project>
